# TFcpp

./: .gitignore  CMakeLists.txt  ReadMe.md
scripts/: test.py  train.py
src/: CatDogCNN.cpp  main.cpp  model_run.cpp
